[workspace]
resolver = "2"
members = [
    "crates/bosun-core",
    "crates/bosun-facts",
    "crates/bosun-primitives",
    "crates/bosun-cli",
    "crates/bosun-systemd-client",
    "crates/bosun-runr-client",
    "crates/bosun-handles",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "Proprietary"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
semver = "1"
sha2 = "0.10"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
procfs = "=0.18"
num_cpus = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = "0.7"
tokio-test = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25901", default-features = false, features = ["systemd1", "zbus-async-tokio"] }
futures-util = "0.3"
debversion = "0.4"
libc = "0.2"
starlark = "~0.13"
minijinja = "2"
toml = "0.8"
fs4 = "0.13"
chrono = { version = "0.4", features = ["clock"] }
signal-hook = "0.3"
cucumber = "0.21"
rand = "0.8"
# tls — rustls + webpki-roots, pure Rust. native-tls сознательно не
# используется, чтобы не тянуть libssl/libcrypto в зависимости musl-сборки.
# Без этой фичи apt.key и любые HTTPS-вызовы падают на TLS-handshake.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
wiremock = "0.6"
nix = { version = "0.31", default-features = false, features = ["user"] }
# Phase O: cert.tls — генерация self-signed x509 без openssl-binary.
# Берём rcgen с ring-бэкендом (pure Rust); RSA-ключи генерируем через
# `rsa`-крейт и импортируем PKCS#8 DER в rcgen — это даёт полный
# pure-Rust pipeline без зависимости от libssl/libcrypto.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rsa = "0.9"
rustls-pki-types = "1"
# Парсер существующих сертификатов: достаём CN и validity, чтобы plan
# мог решить, нужен ли renew. Использовать rcgen для parsing нельзя —
# он умеет только генерировать.
x509-parser = "0.16"
# rcgen использует `time` для not_before/not_after — без зависимости
# напрямую невозможно сконструировать OffsetDateTime для CertificateParams.
time = "0.3"
# Phase P: pg_sql.exec / pg_sql.query — sync PostgreSQL клиент. Pure Rust
# (под капотом tokio-postgres + однопоточный wrapper), без libpq. TLS
# опционален; включим лениво при подключении к DSN с `sslmode=require`.
postgres = "0.19"
# Парсер DSN. Нужен для redaction пароля в логах и для прокидывания
# параметров в `postgres::Config`. URI разбираем сами — `postgres::Config`
# умеет это `parse`, но мы оборачиваем для редакции.
url = "2"
