[package]
name = "bosun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "bosun"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bosun-core = { path = "../bosun-core" }
bosun-facts = { path = "../bosun-facts" }
bosun-primitives = { path = "../bosun-primitives" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
fs4 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
