[package]
name = "bosun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "bosun"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bosun-core = { path = "../bosun-core" }
bosun-facts = { path = "../bosun-facts" }
bosun-primitives = { path = "../bosun-primitives" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
fs4 = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
signal-hook = { workspace = true }

[features]
# BDD integration tests требуют docker и собранного bosun-бинаря.
# Не входят в `cargo test --workspace` — запускаются через `make test-bdd`.
bdd = []

[dev-dependencies]
tempfile = { workspace = true }
cucumber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "bdd"
path = "tests/bdd/main.rs"
harness = false
required-features = ["bdd"]
