[package]
name = "bosun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
starlark = { workspace = true }
