[package]
name = "bosun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
starlark = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
allocative = "0.3"
dupe = "0.9"
libc = { workspace = true }
starlark_derive = "~0.13"
# Traits-only прослойка: ApplyCtx ссылается на dyn RunrHandle/SystemdHandle
# из bosun-handles. Сам bosun-core не зависит от client-крейтов напрямую —
# граф зависимостей остаётся ациклическим: core → handles → clients.
bosun-handles = { path = "../bosun-handles" }

[dev-dependencies]
tempfile = { workspace = true }
