[package]
name = "bosun-facts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bosun-core = { path = "../bosun-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
procfs = { workspace = true }
num_cpus = { workspace = true }
debversion = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
