[package]
name = "bosun-facts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bosun-core = { path = "../bosun-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
procfs = { workspace = true }
num_cpus = { workspace = true }
debversion = { workspace = true }
# Phase T: PG discovery facts — sync PostgreSQL client. Pure Rust (без libpq),
# тот же крейт, что у pg_sql.exec/pg_sql.query в bosun-primitives. Используется
# в RealPgFactQuery для трёх SQL-фактов (is_master, users, extensions).
postgres = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
