[package]
name = "bosun-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bosun-core = { path = "../bosun-core" }
# Traits для общения с runr/systemd. Phase D-примитивы получают handle
# через ctx.runr (Option<Arc<dyn RunrHandle>>).
bosun-handles = { path = "../bosun-handles" }
# Нужен для типов ServiceStatus/TimerStatus/RunrError, которые
# фигурируют в plan/apply и в маппинге ошибок.
bosun-runr-client = { path = "../bosun-runr-client" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# tempfile нужен в Phase 6.1 для atomic-write (NamedTempFile + persist) в file.content::apply.
# Tests внутри крейта получают его транзитивно через [dependencies], дубль в [dev-dependencies] не нужен.
tempfile = { workspace = true }
minijinja = { workspace = true }
libc = { workspace = true }
# fs4 — advisory file-lock через flock(2). Раньше использовался для apt.package
# dpkg-lock probe; после F03-фикса там fcntl, fs4 нужен только в защитном
# тесте `probe_does_not_detect_flock_locks`, чтобы зафиксировать различие
# между BSD flock и POSIX fcntl. Оставлен в [dependencies], т.к. может ещё
# понадобиться (per-host bosun-lock в bosun-cli использует тот же crate).
fs4 = { workspace = true }
# rand — два потребителя:
#   1) jitter backoff'ов в apt-get update retry-loop'е (на 60k нодах
#      фиксированный backoff пробивает mirror одинаковым залпом; ±25%
#      jitter размазывает retry'и по времени);
#   2) Phase O cert.tls — CSPRNG для `RsaPrivateKey::new`.
rand = { workspace = true }
# tokio-util — CancellationToken пробрасывается из ApplyCtx через CommandRunner
# в external-command runner (F05-фикс). Это часть public API trait'а
# CommandRunner, поэтому в [dependencies], не [dev-dependencies].
tokio-util = { workspace = true }
# ureq — Phase I health_check::url. Отдельный Agent (не из runr-client),
# чтобы health-check работал на systemd-only нодах без runr.
ureq = { workspace = true }
# nix — Phase M users.user / users.group: getpwnam/getgrnam через
# RealUsersBackend для идемпотентной проверки текущего состояния и
# geteuid() для root-check перед exec'ом useradd/groupadd. Альтернатива
# (libc + getpwnam_r) была бы unsafe, что запрещено workspace-линтами.
nix = { workspace = true }
# Phase O — генерация self-signed x509 для cert.tls. Pure Rust pipeline:
# rcgen с ring-бэкендом строит сертификат, для RSA-ключей используем
# `rsa`-крейт (ring не умеет генерировать RSA) и импортируем PKCS#8 DER
# через rustls-pki-types. x509-parser нужен в plan для разбора
# существующего сертификата (CN, expiry).
rcgen = { workspace = true }
rsa = { workspace = true }
rustls-pki-types = { workspace = true }
x509-parser = { workspace = true }
time = { workspace = true }

[dev-dependencies]
# Нужен в Phase E unit-тестах: конструируем `SystemdError::BusUnavailable`
# с реальным `zbus::Error::Address`, чтобы убедиться, что маппер ошибок
# относит этот класс к `is_deferrable=true`. В production-коде bosun-primitives
# никак не зависит от zbus — все нужные типы re-exported через bosun-handles.
zbus = { workspace = true }
# wiremock — Phase I integration test для url-health-check'а. Поднимаем
# мок-сервер с заранее заданными status code'ами и проверяем retry-логику.
wiremock = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
