[package]
name = "bosun-runr-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Синхронный HTTP-клиент без рантайма: bosun-примитивы исполняются
# вне tokio, поэтому никаких reqwest/hyper/tokio в production-зависимостях.
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# wiremock требует tokio для собственного рантайма — это допустимо только
# в dev-зависимостях. В тестах используем #[tokio::test] с multi_thread-
# флейвором: на одном worker крутится wiremock-сервер, на другом —
# `tokio::task::spawn_blocking` с sync ureq-вызовами.
wiremock = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
