[package]
name = "bosun-systemd-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Минимальный tokio: рантайм current_thread + macros + sync + time.
# Никаких rt-multi-thread, никаких net.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
zbus = { workspace = true }
zbus_systemd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time", "test-util"] }
tokio-stream = "0.1"
